# Zonnecel

./: LICENSE  README.md  pyproject.toml  test_data_file.csv
src/zonnecel/: arduino_device.py  gui.py  model.py  view.py
src/zonnecel/models/: model.py
src/zonnecel/views/: view.py
