[tool.poetry]
name = "zonnecel-experiment"
version = "0.1.0"
description = ""
authors = ["rdvanturnhout <117833887+rdvanturnhout@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "zonnecel_experiment"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
