[tool.poetry]
name = "zonnecel-experiment"
version = "0.1.0"
description = ""
authors = ["rdvanturnhout <117833887+rdvanturnhout@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "zonnecel_experiment"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pandas = "^1.5.2"
pyserial = "^3.5"
matplotlib = "^3.6.2"
pyvisa-py = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
